--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
         <input type="checkbox" id="switch" /><label for="switch">Toggle</label>
       </div>
       <div class="textEdit">
-        <h4 id="history">samting</h4>
+        <h4 id="history"></h4>
         <h1 id="mainHeader">0</h1>
       </div>
       <div class="continer_numberOperation">
